--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,6 +41,10 @@
     transition: all 500ms ease-in;
 }
 
+.post__btns {
+    display: flex;
+}
+
 .page__wrapper {
     margin-top: 30px;
     display: flex;
